--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-            // Set Chart.js default font
+            Set Chart.js default font
             Chart.defaults.font.family = 'Sarabun';
-            Chart.defaults.font.size = 14;<!DOCTYPE html>
+            Chart.defaults.font.size = 14;
+<!DOCTYPE html>
 <html lang="th">
 <head>
     <meta charset="UTF-8">
