--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>🏥 ระบบ Dashboard การพยาบาลเฉพาะทางและปริญญาโท</h1>
-            <p>ข้อมูลจากสำนักงานคณะกรรมการการอุดมศึกษา (สกอ.)</p>
+            <h1>🏥 ระบบแสดงข้อมูล โควต้าพยาบาลศึกษาต่อหลักสูตรต่างๆ</h1>
+            <p>ข้อมูลหลักสูตรการพยาบาลเฉพาะทางและปริญญาโท จาก นายจำเนือง ปรือปรัก</p>
         </div>
 
 
@@ -387,7 +387,7 @@
         <!-- Footer -->
         <div style="text-align: center; margin-top: 40px; padding: 20px; background: white; border-radius: 15px; box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);">
             <p style="color: #718096; font-size: 14px;">
-                💖 ข้อมูลจากสำนักงานคณะกรรมการการอุดมศึกษา (สกอ.) • อัพเดทล่าสุด 2025
+                💖 ข้อมูลจาก นายจำเนือง ปรือปรัก • อัพเดทล่าสุด 2025
             </p>
         </div>
     </div>
