--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ระบบ Dashboard การพยาบาลเฉพาะทางและปริญญาโท</title>
+    <title>ระบบ Dashboard การพยาบาลเฉพาะทาง ปริญญาโท และปริญญาเอก</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -259,8 +259,8 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>🏥 ระบบแสดงข้อมูล โควต้าพยาบาลศึกษาต่อหลักสูตรต่างๆ</h1>
-            <p>ข้อมูลหลักสูตรการพยาบาลเฉพาะทางและปริญญาโท จาก นายจำเนือง ปรือปรัก</p>
+            <h1>🏥 ระบบแสดงข้อมูล ทางการศึกษาของพยาบาล</h1>
+            <p>ข้อมูลหลักสูตรการพยาบาลเฉพาะทาง ปริญญาโท และปริญญาเอก จาก นายจำเนือง ปรือปรัก</p>
         </div>
 
 
