--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
         <div class="header">
             <h1>🏥 ระบบแสดงข้อมูล ทางการศึกษาของพยาบาล</h1>
             <p>ข้อมูลหลักสูตรการพยาบาลเฉพาะทาง ปริญญาโท และปริญญาเอก จาก นายจำเนือง ปรือปรัก</p>
+            <p>หมายเหตุ ไม่รวม ปีงบประมาณ 2568</p>
         </div>
 
 
